--- a/recipes/rhabarberkuchen.html
+++ b/recipes/rhabarberkuchen.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Rhabarberkuchen</h1>
+    <img src="../img/rhabarberkuchen.jpg" alt="Ein Rhabarberkuchen">
 </body>
 </html>
