create new webpages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/rhabarberkuchen.html"> Rhabarberkuchen</a>
+    <ul>
+        <li><a href="recipes/rhabarberkuchen.html"> Rhabarberkuchen</a></li>
+        <li><a href="recipes/erdnussbutternudeln.html">Erdnussbutternudeln</a></li>
+        <li><a href="recipes/schmorkuerbis.html">Schmorkuerbis</a></li>
 </body>
 </html>
